--- a/research.html
+++ b/research.html
@@ -19,40 +19,67 @@
 <div id="toptitle">
 <h1>Research</h1>
 </div>
-<h2>Publication</h2>
+<h2>Publications &#8201;&mdash;&#8201; papers published/accepted/under revision</h2>
 <ol>
-<li><p>Jingru Zhang and Wei Lin (2019). Scalable estimation and regularization for the logistic normal multinomial model. Biometrics (just accepted). <a href="biomlnm.pdf">[pdf]</a> <a href="biomlnm_supp.pdf">[supplement]</a> </p>
+<li><p><b><a href="https://arxiv.org/pdf/2106.12768.pdf">Two-sample tests for multivariate repeated measurements of histogram objects with applications to wearable device data.</a></b> <br />
+<b>Jingru Zhang</b>, Kathleen R. Merikangas, Hongzhe Li, and Haochang Shou. <br />
+arXiv preprint, arXiv:2106.12768, 2021. (Under 2nd revision for the Annals of Applied Statistics) <br /></p>
+</li>
+<li><p><b><a href="http://www3.stat.sinica.edu.tw/ss_newpaper/SS-2019-0116_na.pdf">Graph-based two-sample tests for data with repeated observations.</a></b> <br />
+<b>Jingru Zhang</b> and Hao Chen. <br />
+Statistica Sinica, DOI:10.5705/ss.202019.0116, 2020. <br /></p>
+</li>
+<li><p><b><a href="https://onlinelibrary.wiley.com/doi/epdf/10.1111/biom.13071">Scalable estimation and regularization for the logistic normal multinomial model.</a></b> <br />
+<b>Jingru Zhang</b> and Wei Lin. <br /> 
+Biometrics, 2019. <br /></p>
 </li>
 </ol>
-<h2>Preprints</h2>
+<h2>Manuscripts submitted/in preparation</h2>
 <ol>
-<li><p>Jingru Zhang and Hao Chen (2019). Graph-based two-sample tests for data with repeated observations. Submitted. <a href="gtests.pdf">[pdf]</a> </p>
+<li><p><b><a href="https://arxiv.org/pdf/2007.01497.pdf">A new nonparametric test for multivariate paired data and pair matching.</a></b> <br />
+<b>Jingru Zhang</b>, Hao Chen, and Xiao-Hua Zhou. <br />
+arXiv preprint arXiv:2007.01497, submitted, 2020.<br /></p>
 </li>
-<li><p>Jingru Zhang and Wei Lin (2019+). Principal subspace analysis for high-dimensional compositional data. To be submitted (available upon request).</p>
+<li><p>Clustering multivariate count data via Dirichlet-multinomial network fusion. <br />
+Xin Zhao, <b>Jingru Zhang</b>, and Wei Lin <br />
+Submitted, 2021. <br /></p>
 </li>
-<li><p>Jingru Zhang, Hao Chen and Xiao-Hua Zhou (2019+). New non-parametric tests
-for multivariate paired data. To be submitted (available upon request).</p>
+<li><p><b><a href="https://arxiv.org/pdf/2109.04657.pdf">Principal subspace analysis for high-dimensional compositional data.</a></b> <br />
+<b>Jingru Zhang</b> and Wei Lin. <br />
+arXiv preprint arXiv:2109.04657, 2021. (This paper won the 2019 Zhong Jiaqing outstanding paper award.) <br /></p>
 </li>
-<li><p>Jingru Zhang, Xiao-Hua Zhou, Xinting Huang and Wenhao Mao (2019+). Doctor
-profile analysis with social regularization. To be submitted (available upon
-request).</p>
+<li><p>Causal treatment effect estimation for outcomes measured with uncertainty. <br />
+<b>Jingru Zhang</b>, Mathias Basner, Christopher W. Jones, David F. Dinges, Haochang Shou, and Hongzhe Li. <br />
+To be submitted (available upon request), 2021. <br /></p>
+</li>
+<li><p>Empirical likelihood tests for variance components in linear mixed-effects models. <br />
+<b>Jingru Zhang</b>, Wei Guo, Joanne S. Carpenter, Nicholas G. Martin, Ian B. Hickie, Andrew Leroux, Kathleen R. Merikangas, Haochang Shou, and Hongzhe Li. <br />
+To be submitted (available upon request), 2021. <br /></p>
+</li>
+<li><p>Non-transient heritability inference based on repeated measures wearable device data. <br />
+<b>Jingru Zhang</b>, Wei Guo, Joanne S. Carpenter, Nicholas G. Martin, Ian B. Hickie, Andrew Leroux, Kathleen R. Merikangas, Haochang Shou, and Hongzhe Li. <br />
+To be submitted (available upon request), 2021. <br /></p>
 </li>
 </ol>
 <h2>Ongoing works</h2>
 <ol>
-<li><p>Doctor-ranking problem.</p>
+<li><p>Mediation analysis for wearable device data.</p>
 </li>
-<li><p>Network regularized problem.</p>
+<li><p>Nonparametric tests for object data. </p>
+</li>
+<li><p>Doctor-ranking problem.</p>
 </li>
 </ol>
 <h2>Software (R package)</h2>
 <ul>
-<li><p><a href="software/gTests_0.2.7z">gTests</a>: Graph-Based Two-Sample Tests.</p>
+<li><p><a href="software/gTests_0.2.7z">gTests</a>: Graph-based two-sample tests.</p>
+</li>
+<li><p><a href="software/gTestsPair_0.1.tar.gz">gTestsPair</a>: Nonparametric tests for multivariate paired data and pair matching.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-07-02 01:37:23 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-04 13:59:52 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
