--- a/research.html
+++ b/research.html
@@ -27,7 +27,7 @@ arXiv preprint, arXiv:2106.12768, 2021. (Under 2nd revision for the Annals of Ap
 </li>
 <li><p><b><a href="http://www3.stat.sinica.edu.tw/ss_newpaper/SS-2019-0116_na.pdf">Graph-based two-sample tests for data with repeated observations.</a></b> <br />
 <b>Jingru Zhang</b> and Hao Chen. <br />
-Statistica Sinica, DOI:10.5705/ss.202019.0116, 2020. <br /></p>
+Statistica Sinica, 2020. <br /></p>
 </li>
 <li><p><b><a href="https://onlinelibrary.wiley.com/doi/epdf/10.1111/biom.13071">Scalable estimation and regularization for the logistic normal multinomial model.</a></b> <br />
 <b>Jingru Zhang</b> and Wei Lin. <br /> 
@@ -79,7 +79,7 @@ To be submitted (available upon request), 2021. <br /></p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-04 13:59:52 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-12 12:35:07 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
