--- a/research.html
+++ b/research.html
@@ -19,11 +19,12 @@
 <div id="toptitle">
 <h1>Research</h1>
 </div>
-<h2>Publications &#8201;&mdash;&#8201; papers published/accepted/under revision</h2>
+<h2>Publications &#8201;&mdash;&#8201; papers published/accepted</h2>
 <ol>
 <li><p><b><a href="https://arxiv.org/pdf/2106.12768.pdf">Two-sample tests for multivariate repeated measurements of histogram objects with applications to wearable device data.</a></b> <br />
 <b>Jingru Zhang</b>, Kathleen R. Merikangas, Hongzhe Li, and Haochang Shou. <br />
-arXiv preprint, arXiv:2106.12768, 2021. (Under 2nd revision for the Annals of Applied Statistics) <br /></p>
+arXiv preprint, arXiv:2106.12768, 2021. <br />
+Annals of Applied Statistics (just accepted) <br /></p>
 </li>
 <li><p><b><a href="http://www3.stat.sinica.edu.tw/ss_newpaper/SS-2019-0116_na.pdf">Graph-based two-sample tests for data with repeated observations.</a></b> <br />
 <b>Jingru Zhang</b> and Hao Chen. <br />
@@ -79,7 +80,7 @@ To be submitted (available upon request), 2021. <br /></p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-12 12:35:07 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-28 20:15:19 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
