--- a/research.html
+++ b/research.html
@@ -24,7 +24,7 @@
 <li><p><b><a href="https://arxiv.org/pdf/2106.12768.pdf">Two-sample tests for multivariate repeated measurements of histogram objects with applications to wearable device data.</a></b> <br />
 <b>Jingru Zhang</b>, Kathleen R. Merikangas, Hongzhe Li, and Haochang Shou. <br />
 arXiv preprint, arXiv:2106.12768, 2021. <br />
-Annals of Applied Statistics (just accepted) <br /></p>
+Annals of Applied Statistics (to appear) <br /></p>
 </li>
 <li><p><b><a href="http://www3.stat.sinica.edu.tw/ss_newpaper/SS-2019-0116_na.pdf">Graph-based two-sample tests for data with repeated observations.</a></b> <br />
 <b>Jingru Zhang</b> and Hao Chen. <br />
@@ -80,7 +80,7 @@ To be submitted (available upon request), 2021. <br /></p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-28 20:15:19 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-29 12:42:18 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
