--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="photo/jingru.jpg" alt="alt text" width="152px" height="197px" />&nbsp;</td>
-<td align="left"><p>Postdoctoral Fellow <br />
-<a href="https://www.dbei.med.upenn.edu">Department of Biostatistics, Epidemiology and Informatics</a> <br />
-<a href="https://www.upenn.edu">University of Pennsylvania</a> <br /> <br />
-207 Blockley Hall, 423 Guardian Drive, <br />
-Philadelphia, PA 19104, <br />
-E-mail: <i>jingru.zhang</i> [@] pennmedicine [DOT] upenn [DOT] edu <br /></p>
-<p><a href="cv_jingru.pdf">Curriculum Vitae</a></p>
+<td align="left"><p>Assistant Professor <br />
+<a href="https://sds.fudan.edu.cn">School of Data Science</a> <br />
+<a href="https://www.fudan.edu.cn/en/">Fudan University</a> <br /> <br />
+N107 Zibinyuan, 220 Handan Road, Yangpu District, <br />
+Shanghai, China,200433 <br />
+E-mail: <i>jr_zhang</i> [@] fudan [DOT] edu [DOT] cn <br /></p>
+<p><a href="JINGRUZHANG.pdf">Curriculum Vitae</a></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am currently a postdoc in the <a href="https://www.dbei.med.upenn.edu">Department of Biostatistics, Epidemiology and Informatics</a> at <a href="https://www.upenn.edu">University of Pennsylvania</a>,
-working with Profs. <a href="http://statgene.med.upenn.edu/">Hongzhe Li</a> and <a href="https://www.cceb.med.upenn.edu/bio/haochang-shou-phd">Haochang Shou</a>. 
+<p>I am currently an assistant professor in the <a href="https://sds.fudan.edu.cn">School of Data Science</a> at <a href="https://www.fudan.edu.cn/en/">Fudan University</a>.
+Previously, I was a postdoc in the <a href="https://www.dbei.med.upenn.edu">Department of Biostatistics, Epidemiology and Informatics</a> at <a href="https://www.upenn.edu">University of Pennsylvania</a>.
 My current research focuses on analyzing high-dimensional complex data arising from mobile health and biomedical studies.</p>
 <p>I completed my Ph.D. in computational mathematics at <a href="https://english.pku.edu.cn/">Peking University</a> in 2019, advised by 
 Profs. <a href="https://web.math.princeton.edu/~weinan/">Weinan E</a> and <a href="http://www.math.pku.edu.cn/teachers/linw/">Wei Lin</a>. 
@@ -49,7 +49,7 @@ Before that, I received the B.S. degree in applied mathematics from <a href="htt
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-15 19:12:16 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-10 14:13:35 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
