--- a/research.html
+++ b/research.html
@@ -21,14 +21,18 @@
 </div>
 <h2>Publications &#8201;&mdash;&#8201; papers published/accepted</h2>
 <ol>
-<li><p><b><a href="https://arxiv.org/pdf/2106.12768.pdf">Two-sample tests for multivariate repeated measurements of histogram objects with applications to wearable device data.</a></b> <br />
-<b>Jingru Zhang</b>, Kathleen R. Merikangas, Hongzhe Li, and Haochang Shou. <br />
-arXiv preprint, arXiv:2106.12768, 2021. <br />
-Annals of Applied Statistics (to appear). <br /></p>
+<li><p><b><a href="https://www.sciencedirect.com/science/article/abs/pii/S0167947322002146">Clustering multivariate count data via Dirichlet-multinomial network
+fusion.</a></b> <br />
+Xin Zhao, <b>Jingru Zhang</b>, and Wei Lin. <br />
+Computational Statistics &amp; Data Analysis, 2023. <br /></p>
 </li>
-<li><p><b><a href="http://www3.stat.sinica.edu.tw/ss_newpaper/SS-2019-0116_na.pdf">Graph-based two-sample tests for data with repeated observations.</a></b> <br />
+<li><p><b><a href="https://projecteuclid.org/journals/annals-of-applied-statistics/volume-16/issue-4/Two-sample-tests-for-multivariate-repeated-measurements-of-histogram-objects/10.1214/21-AOAS1596.short">Two-sample tests for multivariate repeated measurements of histogram objects with applications to wearable device data.</a></b> <br />
+<b>Jingru Zhang</b>, Kathleen R. Merikangas, Hongzhe Li, and Haochang Shou. <br />
+Annals of Applied Statistics, 2022. <br /></p>
+</li>
+<li><p><b><a href="https://www3.stat.sinica.edu.tw/statistica/oldpdf/A32n119.pdf">Graph-based two-sample tests for data with repeated observations.</a></b> <br />
 <b>Jingru Zhang</b> and Hao Chen. <br />
-Statistica Sinica, 2020. <br /></p>
+Statistica Sinica, 2022. <br /></p>
 </li>
 <li><p><b><a href="https://onlinelibrary.wiley.com/doi/epdf/10.1111/biom.13071">Scalable estimation and regularization for the logistic normal multinomial model.</a></b> <br />
 <b>Jingru Zhang</b> and Wei Lin. <br /> 
@@ -39,32 +43,33 @@ Biometrics, 2019. <br /></p>
 <ol>
 <li><p><b><a href="https://arxiv.org/pdf/2007.01497.pdf">A new nonparametric test for multivariate paired data and pair matching.</a></b> <br />
 <b>Jingru Zhang</b>, Hao Chen, and Xiao-Hua Zhou. <br />
-arXiv preprint arXiv:2007.01497, submitted, 2020.<br /></p>
-</li>
-<li><p>Clustering multivariate count data via Dirichlet-multinomial network fusion. <br />
-Xin Zhao, <b>Jingru Zhang</b>, and Wei Lin <br />
-Submitted, 2021. <br /></p>
+arXiv preprint arXiv:2007.01497, 2020.<br /></p>
 </li>
 <li><p><b><a href="https://arxiv.org/pdf/2109.04657.pdf">Principal subspace analysis for high-dimensional compositional data.</a></b> <br />
 <b>Jingru Zhang</b> and Wei Lin. <br />
 arXiv preprint arXiv:2109.04657, 2021. (This paper won the 2019 Zhong Jiaqing outstanding paper award.) <br /></p>
 </li>
 <li><p>Causal treatment effect estimation for outcomes measured with uncertainty. <br />
-<b>Jingru Zhang</b>, Mathias Basner, Christopher W. Jones, David F. Dinges, Haochang Shou, and Hongzhe Li. <br />
-To be submitted (available upon request), 2021. <br /></p>
+<b>Jingru Zhang</b>, Mathias Basner, Christopher W. Jones, David F. Dinges, Haochang Shou, and Hongzhe Li, 2023. <br /></p>
 </li>
-<li><p>Empirical likelihood tests for variance components in linear mixed-effects models. <br />
+<li><p><b><a href="https://arxiv.org/abs/2208.13936">Empirical likelihood tests for variance components in linear mixed-effects models.</a></b> <br />
 <b>Jingru Zhang</b>, Wei Guo, Joanne S. Carpenter, Nicholas G. Martin, Ian B. Hickie, Andrew Leroux, Kathleen R. Merikangas, Haochang Shou, and Hongzhe Li. <br />
-To be submitted (available upon request), 2021. <br /></p>
+arXiv preprint arXiv:2208.13936, 2023. <br /></p>
 </li>
 <li><p>Non-transient heritability inference based on repeated measures wearable device data. <br />
-<b>Jingru Zhang</b>, Wei Guo, Joanne S. Carpenter, Nicholas G. Martin, Ian B. Hickie, Andrew Leroux, Kathleen R. Merikangas, Haochang Shou, and Hongzhe Li. <br />
-To be submitted (available upon request), 2021. <br /></p>
+<b>Jingru Zhang</b>, Wei Guo, Joanne S. Carpenter, Nicholas G. Martin, Ian B. Hickie, Andrew Leroux, Kathleen R. Merikangas, Haochang Shou, and Hongzhe Li, 2023. <br /></p>
+</li>
+<li><p><b><a href="https://arxiv.org/abs/2208.13939">Mediation analysis with densities as mediators with an application to iCOMPARE trial.</a></b> <br />
+<b>Jingru Zhang</b>, Mathias Basner, Christopher W.Jones, David F.Dinges, Haochang Shou, and Hongzhe Li <br />
+arXiv preprint arXiv:2208.13939, 2023.</p>
+</li>
+<li><p>Integration of longitudinal wearable device data from multiple sources. <br />
+<b>Jingru Zhang</b>, Hongzhe Li, and Haochang Shou, 2023. </p>
 </li>
 </ol>
 <h2>Ongoing works</h2>
 <ol>
-<li><p>Mediation analysis for wearable device data.</p>
+<li><p>Integration of wearable device data.</p>
 </li>
 <li><p>Nonparametric tests for object data. </p>
 </li>
@@ -77,10 +82,12 @@ To be submitted (available upon request), 2021. <br /></p>
 </li>
 <li><p><a href="software/gTestsPair_0.1.tar.gz">gTestsPair</a>: Nonparametric tests for multivariate paired data and pair matching.</p>
 </li>
+<li><p><a href="https://github.com/jingru-zhang/ELmethod">ELmethodVar</a>: Empirical likelihood inference of variance components in linear mixed-effects models.</p>
+</li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-29 12:59:31 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-10 14:34:45 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
